Create feature: users can watch public profiles with info about uploaded tracks, albums and playlists
